tests/typing/good/poly_letin.catala_en
```catala
declaration identity content anything of type a
  depends on x content anything of type a
  equals x

declaration foo content money
  equals
  let y equals identity of 12 in
  y
```


```catala-test-cli
$ catala lcalc
┌─[ERROR]─
│
│  Incompatible types:
│    got      integer,
│    expected money
│
│ While typechecking the following expression:
├─➤ tests/typing/good/poly_letin.catala_en:9.3-4:
│   │
│ 9 │   y
│   │   ‾
│
│ Type integer is coming from:
├─➤ tests/typing/good/poly_letin.catala_en:8.28-30:
│   │
│ 8 │   let y equals identity of 12 in
│   │                            ‾‾
│
│ Type money is coming from:
├─➤ tests/typing/good/poly_letin.catala_en:6.25-30:
│   │
│ 6 │ declaration foo content money
│   │                         ‾‾‾‾‾
└─
#return code 123#
```
